--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.eisenhower-matrix {
+.matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.eisenhower-matrix img {
+.matrix img {
   width: 100%;
 }
-.eisenhower-matrix .more-info {
+.matrix .info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.eisenhower-matrix { text-align: center;
+.matrix { text-align: center;
 }
 }
-.task-list-container {
+.task-list {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.task-input-row {
   display: flex;
 }
 ul {
