--- a/style.css
+++ b/style.css
@@ -149,3 +149,15 @@ ul .edit-mode input[type="text"] {
 ul .edit-mode label {
   display: none;
 }
+
+.header,
+.footer,
+.hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    clip-path: inset(100%);
+    overflow: hidden;
+}
