--- a/style.css
+++ b/style.css
@@ -141,12 +141,12 @@ ul li input[type="text"] {
   display: none;
 }
 
-ul .edit-mode input[type="text"] {
+.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul .edit-mode label {
+.edit-mode label {
   display: none;
 }
 
